fixed twitter card img alignment

--- a/css/style.css
+++ b/css/style.css
@@ -179,10 +179,7 @@ h2 {
     max-width: 125px;
     height: auto;
     border-radius: 10px;
-
-    margin: auto;
-    margin-top: 10px;
-    margin-left: 10px;
+ 
 }
 
 .tweeter-card-details {
